// Copyright 2025 Adobe. All rights reserved.
// This file is licensed to you under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License. You may obtain a copy
// of the License at http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under
// the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
// OF ANY KIND, either express or implied. See the License for the specific language
// governing permissions and limitations under the License.

// Author: Sergei Parshev (@sparshev)

// Contains options for messages and services to alter streaming behavior
// Example:
// message ApplicationState {
//   option (subscribe_config) = {
//     permission_check: "ApplicationStateGetState"
//   };
//   // ... message fields
// }

syntax = "proto3";

package aquarium.v2;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/adobe/aquarium-fish/lib/rpc/proto/aquarium/v2;aquariumv2";

// StreamingConfig defines streaming configuration for a message
message SubscribeConfig {
  // RBAC permission method needed for access to this message (e.g., "ApplicationServiceGetState")
  // It will use "All" suffix to check if non-owned objects could be delivered
  optional string permission_check = 1;
}

extend google.protobuf.MessageOptions {
  // Streaming configuration for the message
  optional SubscribeConfig subscribe_config = 50001;
}

extend google.protobuf.ServiceOptions {
  // Streaming configuration for the service
  optional bool skip_service_streaming = 50002;
}
